--- a/project/docs/.vuepress/public/less/index.less
+++ b/project/docs/.vuepress/public/less/index.less
@@ -1,4 +1,4 @@
-@import './layout.less';
+@import './sh.layout.less';
 .theme-default-content:not(.custom){
     max-width: 1080px  !important;
     margin: 0 !important;
