--- a/project/docs/.vuepress/public/less/sh.layout.less
+++ b/project/docs/.vuepress/public/less/sh.layout.less
@@ -135,6 +135,7 @@
             }
             .top-block{
                 width: 100%;
+                box-sizing: border-box;
                 background: #FFFFFF;
                 border-radius: 4px;
                 padding: 10px 20px;
